Add multi-owner system with subscription plans and boss admin dashboard

--- a/public/owner-dashboard.html
+++ b/public/owner-dashboard.html
@@ -271,6 +271,10 @@
       <section class="dashboard" id="dashboard">
         <div class="stats">
           <div class="stat-card">
+            <span>Subscription</span>
+            <strong id="subscriptionPlan">Free</strong>
+          </div>
+          <div class="stat-card">
             <span>Active guests</span>
             <strong id="activeCount">0</strong>
           </div>
